Numeración y alguna errata

--- a/galois/input/3-ext-galois.tex
+++ b/galois/input/3-ext-galois.tex
@@ -1108,7 +1108,7 @@ Vamos a empezar con un recordatorio de \textit{Teoría de Grupos}.
     Además por el teorema \ref{thm:3.5.6}, $\exists \xi \in E:\ \gen{\xi} = E^\times \implies K(\xi) = E$.
 \end{proof}
 
-\begin{ex}[H3.19]
+\begin{ex}[H3.17]
     Demuestra que para cada primo $p$ y cada natural $n \in \N$ positivo, existe un polinomio irreducible $f \in \F_p[x]$ de grado $n$.\\\\
     \textbf{Solución}\\
     Por el teorema \ref{thm:3.5.2}(a), $\exists$ un cuerpo $E$ tal que $\vabs{E} = p^n$.
@@ -1131,7 +1131,7 @@ Vamos a empezar con un recordatorio de \textit{Teoría de Grupos}.
     Sea $f(x) = x^4 - 2 \in \Q[x]$. Determina:
     \begin{itemize}
         \item[(a)] $E=\Q(f)$.
-        \item[(b)] $\vabs{E:Q}$.
+        \item[(b)] $\vabs{E:\Q}$.
         \item[(c)] $\alpha \in E$ tal que $\Q(\alpha) = E$.
         \item[(d)] Decide si $\sigma: \Q(\sqrt 2) \to \Q(\sqrt 2);\ \sqrt{2} \mapsto -\sqrt{2}$ se puede extender a un isomorfismo de $\Q(\sqrt[4]{2})$ o de $E$.
     \end{itemize}
