--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -198,6 +198,7 @@ numbered=no
 \newcommand{\rest}[1]{\left.#1\right|}
 \renewcommand{\exp}[1]{\mathrm{exp}(#1)}
 \newcommand{\mcm}[1]{\mathrm{mcm}\sdf{#1}}
+\newcommand{\mtc}[1]{\mathcal{#1}}
 %\DeclareMathSymbol{\varprod}{\mathop}{largesymbolsA}{16}
 
 \newcommand{\hr}{\rule{\textwidth}{.4pt}}
@@ -246,7 +247,8 @@ Revisión del \today $ $ a las \currenttime.
 \input{input/2-extensiones.tex}
 \part{Segundo parcial}
 \input{input/3-ext-galois.tex}
-
+\part{Tercer parcial}
+\input{input/4-teo-galois.tex}
 \part{Apéndices}
 
 %\renewcommand{\chaptername}{Apéndice}
