--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{cancel}
 \usepackage{letltxmacro}
 \LetLtxMacro\amsproof\proof
 \LetLtxMacro\amsendproof\endproof
