terminado bloque 2, empezado bloque 3

--- a/logica-matematica/input/6-consecuencia-sintactica.tex
+++ b/logica-matematica/input/6-consecuencia-sintactica.tex
@@ -125,7 +125,7 @@ En nuestro curso, nuestro $SF$ consta de:
 \end{proof}
 
 \section{Coherencia de teorías}
-\begin{dfn}
+\begin{dfn}[Lenguaje coherente. Lenguaje incoherente.]
     Sea $L$ un lenguaje, $T$ una $L$-teoría. Decimos que $T$ es \textbf{incoherente} si existe $F \in \for(L)$ tal que $T \vdash F \land \neg F$. $T$ es \textbf{coherente} si no es \textit{incoherente}.
 \end{dfn}
 
