--- a/logica-matematica/input/5-consecuencia-semantica.tex
+++ b/logica-matematica/input/5-consecuencia-semantica.tex
@@ -16,9 +16,10 @@
                 \item $G_3: \forall x \exists y\ x+y = 0$.
                 \item $G_4: \forall x \forall y\ x+y=y+x$.
                 \item $G_{5n}: \forall x \exists y\ x = n \cdot y$ ($n$-divisible). $n \cdot y$ abrevia $\sum_1^n y$.
-                \item $G_{6n}: \forall\ x (n\cdot x = 0 \then x = 0)$
+                \item $G_{6n}: \forall\ x (n\cdot x = 0 \then x = 0)$.
+                \item $G_7: \exists x\ x\neq 0$.
             \end{itemize}
-            Entonces GADST $= \sdf{G_1, G_2, G_3, G_3} \bigcup \sdf{G_{5n}}_{n>1,\ n \in \N} \bigcup \sdf{G_{6n}}_{n>1,\ n \in \N}$.
+            Entonces GADST $= \sdf{G_1, G_2, G_3, G_3, G_7} \bigcup \sdf{G_{5n}}_{n>1,\ n \in \N} \bigcup \sdf{G_{6n}}_{n>1,\ n \in \N}$.
         \item $\sdf{\forall x\ x \neq x}$ y $\sdf{F \land \neg F}$ son teorías, aunque sean \textit{incoherentes}.
     \end{enumerate}
 \end{eg}
